css/cover.css
/* START: NAV */
.navbar {
    display: flex;
    align-items: center;
    width: 100%;
    height: 10vh;
    position: fixed;
    background-color: #1d1d1fdc;
    flex-wrap: wrap;
}

.logo-section {
    margin: 0;
    margin-left: 4.5rem;
}

.logo-letter {
    font-size: 2rem;
}

.menu-mobile-button {
    height: 5vh;
    width: 10vw;
    position: absolute;
    top: 0;
    left: 0;
    margin: 1rem 1rem 0 1rem;
    opacity: 0;
}

#burger-button {
    opacity: 1;
}

.categories-container {
    display: none;
    position: absolute;
    top: 10vh;
    left: 0;
    height: 100vh;
    width: 45vw;
    background-color: var(--main-color);
}

.menu-mobile-button:checked ~ .categories-container {
    display: block;
}
.search-form {
    display: flex;
    flex: 1;
    justify-content: flex-end;
}

#search-box {
    width: 6.7rem;
    height: 1.6rem;
    margin: 1rem 1rem;
    border: 1px solid #fff;
    border-radius: .15rem;
    padding: .5rem 0rem .5rem .5rem;
    font-size: .9rem;
    background-color: var(--background-color);
    color: var(--letter-color);
}

#search-box::placeholder {
    color: var(--letter-color);
    opacity: 1; /* Firefox */
}

.categories {
    list-style: none;
    padding-left: 1.2rem;
}

.category {
    margin-top: 1.5rem;
}

.category > a {
    text-decoration: none;
    color: var(--letter-color);
    font-weight: bold;
}

.sign-out-button {
    position: relative;
    width: 80%;
    padding: .3rem;
    background-color: var(--letter-color);
    color: var(--background-color);
    border: 0;
    text-align: center;
    border-radius: .3rem;
    font-size: 1rem;
    font-weight: 700;
}

.sign-out-button-desktop {
    display: none;
}

/* END: NAV */


/* START: HEADER */
    .alto {
        height: 100px;
        background-color: red;
    }

/* END: HEADER */

/* START: MAIN */
.alto2 {
    height: 100px;
    background-color: transparent;
}

/* END: MAIN */


/* START: FOOTER */
.footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #1b1b1b;
    width: 100%;
    padding-bottom: 2.5rem;
    font-size: 1rem;
}

.footer aside {
    max-width: 90vw;
    width: 100%;
}

.footer h2 {
    color: var(--main-color);
    text-align: center;
}


.footer-about {
    text-align: justify;
}

.about-us-desc {
    margin-bottom: 0;
}

.links-list-container {
    display: flex;
    justify-content: space-around;
}

.links-list {
    list-style: none;
}

.links-list li {
    margin-bottom: .5rem;
}

.links-list a {
    text-decoration: none;
    color: var(--letter-color);
}

.links-list a:hover {
    color: var(--hover-color);
}

.footer-social {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.form-newsletter {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.newsletter-container {
    display: flex;
    flex-wrap: wrap;
    margin-top: 1rem;
}

.newsletter-input {
    height: 2rem;
    width: 10rem;
    border-style: unset;
    border-radius: .2rem;
    padding: 1rem;
}

.newsletter-submit {
    width: 5rem;
    height: 2rem;
    margin-left: 1rem;
    background-color: var(--main-color);
    color: var(--letter-color);
    border: 0;
    border-radius: .2rem;
    font-size: .8rem;
    cursor: pointer;
}

.newsletter-submit:hover {
    background-color: var(--hover-color);
}

.social-list {
    display: flex;
    margin: 0 auto;
    margin-top: 1rem;
}

.social-list li {
    list-style: none;
    padding: 1rem;
}

.social-icon {
    display: block;
    background-repeat: no-repeat;
    background-size: 2.5rem;    
    width: 2.5rem;
    height: 2.5rem;
}

.social-facebook {
    background-image: url(../img/icon/social/flat-facebook.png);
}

.social-twitter {
    background-image: url(../img/icon/social/flat-twitter.png);
}

.social-youtube {
    background-image: url(../img/icon/social/flat-youtube.png);
}

.social-instagram {
    background-image: url(../img/icon/social/flat-instagram.png);
}

/* END: FOOTER */


/* Media queries */

/* ~Tablet */
@media all and (min-width: 480px) {

    /* START: NAV */
    .menu-mobile-button {
        display: none;
    }

    .categories-container {
        display: block;
        width: 30vw;
    }

    .logo-section {
        margin-left: 1.5rem;
    }

    #search-box {
        width: 10rem;
    }

    /* END: NAV */

    /* START: FOOTER */
    .footer {
        width: auto;
        margin-left: 30vw;
    }

    .footer aside {
        max-width: 90%;
        width: 100%;
    }

    .links-list li {
        margin-bottom: 1rem;
    }

    .newsletter-input {
        height: 2.5rem;
        width: 13rem;
        font-size: .9rem;
    }

    .newsletter-submit {
        width: 6rem;
        height: 2.4rem;
        font-size: 1rem;
        font-weight: bold;
    }

    /* END: FOOTER */
}

@media all and (min-width: 839px) {
    /* START: NAV */
    .logo-letter {
        font-size: 4rem;
    }

    .categories-container {
        position: initial;
        top: initial;
        left: initial;
        height: auto;
        width: auto;
        background-color: transparent;
        flex: 1;
    }

    .categories {
        display: flex;
        justify-content: flex-end;

    }

    .category {
        margin: 0;
    }

    .category a {
        padding: 37px 1rem;
    }

    .category a:hover {
        background-color: var(--main-color);
    }
    
    .sign-out-button {
        display: none;
    }

    .search-form {
        flex: none;
    }

    #search-box {
        height: 1.8rem;
        margin: 1rem 1rem 1rem .8rem;
    }

    .sign-out-button-desktop {
        display: block;
        margin: 0;
        margin-right: 1rem;
        padding: .5rem;
        background-color: var(--main-color);
        color: var(--letter-color);
        border: 0;
        text-align: center;
        border-radius: .3rem;
        font-size: 1rem;
        font-weight: 700;
        cursor: pointer;
    }

    .sign-out-button-desktop:hover {
        background-color: var(--hover-color);
    }

    /* END: NAV */

    /* START: FOOTER */
    .footer {
        display: flex;
        flex-direction: row;
        align-items: flex-start;
        justify-items: center;
        width: 100%;
        margin: 0;
    }

    .footer aside {
        max-width: 100%;
        display: flex;
        flex-direction: column;
        margin-left: 1.5rem;
        margin-right: 0rem;
    }

    .footer-social {
        margin-right: 1.5rem;
    }

    .footer h2 {
        font-size: 1.7em;
    }

    .links-list-container {
        margin-top: 1rem;
    }

    .links-list li {
        margin-bottom: 1.2rem;
    }

    .form-newsletter {
        margin-top: .8rem;
        width: 100%;
    }

    .newsletter-input {
        margin-left: 2rem;
    }

    .newsletter-submit {
        margin-left: 2rem;
    }

    .social-list {
        width: 100%;
        justify-content: center;
    }
    
    .social-facebook {
        background-image: url(../img/icon/social/lineal-facebook.png);
    }
    .social-facebook:hover {
        background-image: url(../img/icon/social/flat-facebook.png);
    }

    .social-twitter {
        background-image: url(../img/icon/social/lineal-twitter.png);
    }
    .social-twitter:hover {
        background-image: url(../img/icon/social/flat-twitter.png);
    }

    .social-youtube {
        background-image: url(../img/icon/social/lineal-youtube.png);
    }
    .social-youtube:hover {
        background-image: url(../img/icon/social/flat-youtube.png);
    }

    .social-instagram {
        background-image: url(../img/icon/social/lineal-instagram.png);
    }
    .social-instagram:hover {
        background-image: url(../img/icon/social/flat-instagram.png);
    }

    /* END: FOOTER */
}

